--- a/style.css
+++ b/style.css
@@ -1,13 +1,23 @@
-body {
-  background: linear-gradient(90deg, pink, #0066ff);
+body,
+html {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden; /* Opcjonalnie, jeśli nie chcesz pasków przewijania */
+}
+
+.chuj {
+  background: linear-gradient(85deg, #0d1117, #222d3f);
   width: 100%;
+  height: 100%;
 }
 
 .nav {
   display: flex;
   justify-content: space-between;
   margin-right: 10%;
-  margin-top: 2%;
+  padding: 30px;
 }
 
 .nav:first-child {
@@ -19,36 +29,36 @@ body {
   font-family: "Bebas Neue", sans-serif;
   font-family: "Roboto", sans-serif;
   text-decoration: none;
-  font-size: 30px;
+  font-size: 35px;
   text-transform: capitalize;
   padding: 20px;
 }
 
-a.xd:hover {
-  color: pink;
+.xd:hover {
+  color: #d2f7fd;
   position: relative;
 }
 
-a.xd::after {
+.xd::after {
   content: "";
   position: absolute;
   width: 100%;
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: pink;
+  background-color: #d0f4fc;
   transform-origin: bottom right;
   transition: transform 0.33s ease-out;
   transform: scaleX(0);
 }
 
-a.xd:hover::after {
+.xd:hover::after {
   transform: scaleX(1);
 
   transform-origin: bottom left;
 }
 
-.logo > a:hover {
+/* .logo > a:hover {
   color: #589bff;
 }
 .logo > a::after {
@@ -64,6 +74,138 @@ a.xd:hover::after {
   transform: scaleX(0);
 }
 .logo > a:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+} */
+
+#menu-bar {
+  display: none;
+}
+
+label.xd {
+  cursor: pointer;
+  display: none;
+}
+
+@media (max-width: 1080px) {
+  div.nav {
+    padding: 0px;
+  }
+  div label.xd {
+    display: initial;
+  }
+  div nav.navbar {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    background: #fff;
+    border-top: 1px solid black;
+  }
+  div nav a {
+    width: 100%;
+  }
+
+  #menu-bar:checked ~ .navbar {
+    display: initial;
+  }
+}
+
+.txt {
+  display: flex;
+  gap: 40px;
+  margin: auto;
+  width: 50%;
+  padding: 120px 0;
+}
+
+.img {
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.opis {
+  width: 400px;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+h1,
+h2 {
+  color: white;
+  font-family: "Bebas Neue", sans-serif;
+  font-family: "Roboto", sans-serif;
+  text-decoration: none;
+  margin: 3px;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+#xd {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  margin-top: 2%;
+}
+
+#xd a i {
+  text-decoration: none;
+  color: white;
+  padding: 0 10px;
+  font-size: 2.137rem;
+}
+
+#cv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  left: 140px;
+  width: 120px;
+  height: 30px;
+  background: #253042;
+  margin-top: 5%;
+  border: solid 1px #1d2531;
+  border-radius: 12px;
+}
+
+#cv a {
+  font-family: "Bebas Neue", sans-serif;
+  font-family: "Roboto", sans-serif;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+}
+
+#cv a:hover {
+  color: #d2f7fd;
+}
+
+#cv a::after {
+  content: "";
+  position: absolute;
+  width: 90%;
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  background-color: #d0f4fc;
+  transform-origin: bottom right;
+  transition: transform 0.33s ease-out;
+  transform: scaleX(0);
+}
+
+#cv a:hover::after {
   transform: scaleX(1);
   transform-origin: bottom left;
 }
