--- a/style.css
+++ b/style.css
@@ -237,7 +237,11 @@ h2 {
     display: flex;
     flex-direction: column-reverse;
     transform: scale(0.75);
-    margin-top: -16vh;
+    margin-top: -15vh;
+  }
+
+  .img {
+    margin-top: -4vh;
   }
 
   .xd {
