--- a/style.css
+++ b/style.css
@@ -71,9 +71,7 @@ label.xd {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* gap: 40px; */
-  margin: auto;
-  padding: 120px 0;
+  padding: 200px 0;
 }
 
 .img {
@@ -185,27 +183,32 @@ h2 {
 }
 
 @media (max-width: 1080px) {
-  div.nav {
+  /* div.nav {
     padding: 30px 0;
     margin-left: 0;
-  }
-  div label.xd {
+  } */
+  label.xd {
     display: initial;
   }
-  div nav.navbar {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    right: 0;
-    background: #fff;
-    border-top: 1px solid black;
+
+  div.XD {
+    position: relative;
   }
-  div nav a {
+
+  .navbar {
+    position: absolute;
+    background: rgba(255, 255, 255, 10%);
+    padding: 20px;
+    display: none;
     width: 100%;
   }
 
-  #menu-bar:checked ~ .navbar {
-    display: initial;
+  input:checked ~ .navbar {
+    display: block;
+  }
+
+  .navbar a.xd::after {
+    position: relative;
   }
 
   #menuxd {
@@ -230,34 +233,16 @@ h2 {
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 576px) {
   .txt {
     padding: 0;
     display: flex;
     flex-direction: column-reverse;
-    transform: scale(0.9);
-    margin-top: -8vh;
+    transform: scale(0.85);
+    margin-top: -8.5vh;
   }
 
   .xd {
     font-size: 2rem;
-  }
-}
-
-@media (max-width: 450px) {
-  .txt {
-    padding: 0;
-    display: flex;
-    flex-direction: column-reverse;
-    transform: scale(0.75);
-    margin-top: -17vh;
-  }
-
-  .img {
-    margin-top: -4vh;
-  }
-
-  .xd {
-    font-size: 1.6rem;
   }
 }
