--- a/style.css
+++ b/style.css
@@ -2,12 +2,10 @@ body,
 html {
   margin: 0;
   padding: 0;
-  height: 100vh;
-  width: 100vw;
-  overflow: hidden; /* Opcjonalnie, jeśli nie chcesz pasków przewijania */
+  overflow: hidden;
 }
 
-.chuj {
+.all {
   background: linear-gradient(85deg, #0a0d11, #31415c);
   width: 100vw;
   height: 100vh;
@@ -134,8 +132,9 @@ h2 {
   height: 30px;
   background: #2f3b4e;
   margin-top: 5%;
-  border: solid 1px #1d2531;
+  /* border: solid 1px #1d2531; */
   border-radius: 12px;
+  transition: background 0.5s, box-shadow 0.3s;
 }
 
 #cv a {
@@ -146,26 +145,9 @@ h2 {
   font-weight: bold;
 }
 
-#cv a:hover {
-  color: #d2f7fd;
-}
-
-#cv a::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 1px;
-  bottom: 0;
-  left: 0;
-  background-color: #d0f4fc;
-  transform-origin: bottom right;
-  transition: transform 0.33s ease-out;
-  transform: scaleX(0);
-}
-
-#cv a:hover::after {
-  transform: scaleX(1);
-  transform-origin: bottom left;
+#cv:hover {
+  background: linear-gradient(85deg, #2271d8, #314e80);
+  box-shadow: 0 0 15px #2271d8;
 }
 
 #menuxd {
@@ -204,6 +186,7 @@ h2 {
   } */
 
   .navbar {
+    display: none;
     position: fixed;
     background: linear-gradient(90deg, rgb(33, 34, 49), rgb(26, 27, 43));
     opacity: 0.95;
@@ -211,7 +194,6 @@ h2 {
     width: 100vw;
     top: 0;
     left: 0;
-    display: none;
   }
 
   input:checked ~ .navbar {
@@ -219,6 +201,7 @@ h2 {
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    z-index: 0;
   }
 
   .navbar a.xd::after {
