--- a/stylee.css
+++ b/stylee.css
@@ -67,11 +67,10 @@ html {
   width: 100vw;
   top: 8vh;
   left: 0;
-  background: linear-gradient(85deg, #0a0d11, #31415c);
-  opacity: 0.95;
+  backdrop-filter: blur(5px);
 }
 
-.navbar a {
+.navbar a.xd {
   padding: 20px;
 }
 
